<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/btn_sendEmail"
        android:layout_width="249dp"
        android:layout_height="38dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/background_btn"
        android:fontFamily="@font/josefin_sans_semibold"
        android:freezesText="false"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/inputtext_bg"
        android:ems="10"
        android:fontFamily="@font/duru_sans"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#4A4A4A"
        android:textColorHint="#9C9C9C"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/inputtext_bg"
        android:ems="10"
        android:fontFamily="@font/duru_sans"
        android:hint="Email Address"
        android:paddingLeft="20dp"
        android:textColor="#4A4A4A"
        android:textColorHint="#9C9C9C"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.972" />

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/inputtext_bg"
        android:ems="10"
        android:fontFamily="@font/duru_sans"
        android:hint="Nickname"
        android:paddingLeft="20dp"
        android:textColor="#4A4A4A"
        android:textColorHint="#9C9C9C"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sendEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/inputtext_bg"
        android:ems="10"
        android:fontFamily="@font/duru_sans"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#4A4A4A"
        android:textColorHint="#9C9C9C"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/duru_sans"
        android:text="Already have an account?"
        android:textColor="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sendEmail" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/duru_sans"
        android:text="Sign In"
        android:textColor="#F44336"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/btn_sendEmail" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="Sign Up"
        android:textStyle="bold"
        android:textColor="#4A4A4A"
        android:textSize="25dp"
        android:fontFamily="@font/duru_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>