...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/background_btn"
        android:fontFamily="@font/josefin_sans_semibold"
        android:freezesText="false"
...
